8235908: omit ThreadPriorityPolicy warning when value is set from image Reviewed-by: dholmes, clanger, kvn