src/hotspot/share/runtime/flags/jvmFlag.cpp
@@ -294,6 +294,10 @@ bool JVMFlag::is_command_line() {
   return (_flags & ORIG_COMMAND_LINE) != 0;
 }
 
+bool JVMFlag::is_jimage_resource() {
+  return (get_origin() == JIMAGE_RESOURCE);
+}
+
 void JVMFlag::set_command_line() {
   _flags = Flags(_flags | ORIG_COMMAND_LINE);
 }
@@ -987,6 +991,12 @@ bool JVMFlag::wasSetOnCmdline(const char* name, bool* value) {
   if (result == NULL) return false;
   *value = result->is_command_line();
   return true;
+}
+
+bool JVMFlagEx::is_jimage_resource(JVMFlags flag) {
+  assert((size_t)flag < JVMFlag::numFlags, "bad command line flag index");
+  JVMFlag* f = &JVMFlag::flags[flag];
+  return f->is_jimage_resource();
 }
 
 void JVMFlagEx::setOnCmdLine(JVMFlagsWithType flag) {
