src/hotspot/share/runtime/flags/jvmFlag.hpp
@@ -175,6 +175,7 @@ struct JVMFlag {
 
   bool is_default();
   bool is_ergonomic();
+  bool is_jimage_resource();
   bool is_command_line();
   void set_command_line();
 
